<resources>
    <string name="app_name">Student Info FBDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_new_student_information">Insert New Student Information</string>
    <string name="enter_your_student_id">Enter Your Student Id</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="choose_your_school">Choose Your School</string>
    <string name="choose_your_department">Choose Your Department</string>
    <string name="enter_your_date_of_birth">Enter Your Date of Birth</string>
    <string name="enter_your_nid_number">Enter Your NID Number</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="present_address">Present Address</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="submit">Submit</string>
    <string name="student_id_number_view">Student ID Number</string>
    <string name="drop_down_list">Drop Down List</string>

    <!--  Academy School Names-->

    <string-array name="school_list">
        <item>School of Business &amp; Economics</item>
        <item>School of Engineering &amp; Physical Sciences</item>
        <item>School of Humanities &amp; Social Sciences</item>
        <item>School of Health &amp; Life Sciences</item>
    </string-array>

    <!--  Department Names-->

    <string-array name="department_list">
        <item>Accounting &amp; Finance</item>
        <item>Economics</item>
        <item>Management</item>
        <item>Marketing &amp; International Business</item>
        <item>MBA &amp; EMBA</item>
        <item>Architecture</item>
        <item>Civil &amp; Environmental Engineering</item>
        <item>Electrical &amp; Computer Engineering</item>
        <item>Mathematics &amp; Physics</item>
        <item>English &amp; Modern Languages</item>
        <item>Political Science &amp; Sociology</item>
        <item>Law</item>
        <item>History &amp; Philosophy</item>
        <item>Biochemistry &amp; Microbiology</item>
        <item>Environmental Science &amp; Management</item>
        <item>Pharmaceutical Sciences</item>
        <item>Public Health</item>
    </string-array>
</resources>